--- a/package.json
+++ b/package.json
@@ -1,18 +1,36 @@
 {
   "name": "@vvee/component",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "wee-frame component",
-  "main": "index.js",
   "scripts": {
     "start": "wee start app",
     "build": "wee build app",
+    "build:comp": "wee build lib",
     "debug": "node --inspect-brk=5858 ../../node_modules/.bin/wee start app"
   },
   "dependencies": {
-    "@vvee/cli": "latest",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@vvee/core": "^0.0.4-dev.3",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
-    "lodash": "^4.17.21"
+    "clsx": "^2.1.0",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.336.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@vvee/cli": "^0.0.6",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
+  },
+  "main": "./lib/index.umd.js",
+  "types": "./lib/index.d.ts",
+  "module": "./lib/index.mjs"
 }
