--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vvee/component",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "wee-frame component",
   "scripts": {
     "start": "wee start app",
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@vvee/core": "^0.0.4-dev.3",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.336.0",
     "tailwind-merge": "^2.2.1",
