--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.0.2",
-    "@vvee/core": "^0.0.4-dev.3",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.1.0",
@@ -28,12 +28,12 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@vvee/cli": "^0.0.6",
+    "@vvee/cli": "latest",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
   },
   "main": "./lib/index.umd.js",
-  "types": "./lib/index.d.ts",
+  "types": "./lib/types/index.d.ts",
   "module": "./lib/index.mjs"
 }
