--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vvee/component",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "wee-frame component",
   "scripts": {
     "start": "wee start app",
@@ -9,6 +9,7 @@
     "debug": "node --inspect-brk=5858 ../../node_modules/.bin/wee start app"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -28,7 +29,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@vvee/cli": "latest",
+    "@vvee/cli": "0.0.17",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
