--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vvee/component",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "wee-frame component",
   "scripts": {
     "start": "wee start app",
@@ -23,6 +23,7 @@
     "cmdk": "^1.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.479.0",
+    "react-resizable-panels": "^2.1.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
