--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vvee/component",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "wee-frame component",
   "scripts": {
     "start": "wee start app",
@@ -17,6 +17,7 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.1.0",
