--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vvee/component",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "wee-frame component",
   "scripts": {
     "start": "wee start app",
@@ -16,6 +16,7 @@
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.1.8",
