--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vvee/component",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "wee-frame component",
   "scripts": {
     "start": "wee start app",
@@ -13,6 +13,7 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.1.3",
